<resources>
    <string name="app_name">Gongdo Middle School</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_info">Info</string>
    <string name="title_activity_meal">MealActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="school_introduce">School Introduce</string>
    <string name="notice">Notice</string>
    <string name="cafeteria_menu">Cafeteria Menu</string>
    <string name="date">Date</string>
    <string name="writer">Writer</string>
    <string name="title">Title</string>
    <string name="loading_title">Loading...</string>
    <string name="no_data_dinner">No dinner</string>
    <string name="no_data_lunch">No lunch</string>
    <string name="no_network_msg">Network doesn\'t connect.</string>
    <string name="way_to_come">Way to come</string>
    <string name="school_mark">School Mark</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="school_mark_message">The center of the mark is to loosen the 공도 to the consonants and vowels, white is the peace, the red line refers to the creativity and passion, yellow is given, a strong force and the life of the New Year</string>
    <string name="ok">OK</string>
    <string name="rule">School Rule</string>
    <string name="rule_1">Chapter 1 a total of Chick 		                     Article 1 (name) have rules is called ‘Kongdo Middle School school life as a human rights rules’.  Article 2 by the student life and the rules of the issues, information on the staff Regulations (purpose) enable students to an independent and democratic civic life and learning abilityPromote law-abiding spirit and community schools as the leader of the 21st century with globalization, information society make to realizing the rule of law and society and national development contributes to theFor the purpose.  Article 9 of the Enforcement Decree of how elementary, secondary, educate this Regulation, Article 3 (basis of application) (items 7, paragraph 1, No. 4, No. 8) and (Article 18) laws and secondary education and sihaengnyeong the same Act (Article 31) ,Leading Commission, (j Vol.8, 520), (j Vol.8, 4085), Gyeonggi Province school violence prevention ordinance, Gyeonggi Province and sihaengnyeong the same Act, with the Act on measures to, and school regulations mentioned itemsSchool based through details on the human rights.① the (life policy on the map) priority on the guidance is a student\'s personality, respect of Article 4 with democratic procedures and means, rather than penalties for acts of problemsPrevention focus on map. Clean the leading students to restrict the right to education because the rules should not be run for purposes other than those necessary for educational purposes.Ordinarily, ③ the discipline of the student\'s students should you. must necessarily take into account and educational aspects A flagon of student guidance among students on the premise, and therefore disciplinary responsibility of the homeroom teacher is my homeroom teacher\'s opinion by accepting the best I\'ll take care of.Put to discipline students when the tool, or body when corporal punishment is prohibited in principle not how to use corporal punishment, including ways such as an admonition and discipline.</string>
    <string name="rule_2">Chapter 2 school year  Paragraph One campus life   Article 5 (The default behavior) basic manners and orderly under mutual trust as a student academic background and creativity in exploring themselves in position for self development and raise yourShe must be fast on.Article 6 (self-directed learning) autonomous studying and reading in the energy to campus and harmful audiovisual material and don\'t carry bad books.  Cherish ① the (access to facilities and environment) school facilities, textbooks, and an aficionado of (including electricity or running water) dioceses in Article 7 of the use and neat.Clean the doodles of facilities in schools or should not be damaged, and indoor and outdoor amenities of all the learning environment shall be working.  Article 8 (respect for the property of others) other students to cherish, and a person\'s purchases of private ownership of their students and teachers to touch or share without permission.Article 9 (friendships) student junjung each other - and any protected and build mutual trust and, to make friendships desirable through it and healthy school culture,Efforts.  ① the Article 10 (violence prevention) of assembly, including bullying, school students each other, violence or violence shall not apply to join the (physical, psychological violence, sexual violence), and try to resolve conflict or issue by dialogue. Clean or I\'ll find out any sign of violence or bullying and other In each case they erupt, in paragraph should be notified immediately and can remain anonymous. A homeroom teachers or counselors or the student\'s guardians 2 institution exclusively for dedicated teachers, schools, school violence, violence or bullying in schools singoham3. The Gyeonggi education office homepages and school violence reporting center 4 police station in women cheongsonyeongye Youth counseling Center landed 5. Six school violence reporting centers 117 (24 hours), ③ measures may request protection from the council school violence victims \' violence.A flagon of school violence perpetrators of violence follow a measure for the council\'s leading and educational measures.  (dating) Article 11 of the students respect with each other, based on the consciousness of gender equality. Somewhere in manners of the opposite sex, and responsibly.Clean the associated performance problems if any class teacher and ask for help, such as teachers who want. ③ the meeting of boys and girls alone is always use a spot open. ④ the sanctity of life and should sex education training courses to raise awareness of responsibility.Article 12 (club activities) encouraging a healthy youth culture and each individual student\'s ability and talent support activities can manifest to the health club, and the operation the followingLike each call. ① each call shall be for the approval requirement is my club. 1. activities of purpose and process is to be worth it for educational purposes.2. should keep the tutor must be. 3. established an annual action plan should obtain the approval of the school. Clean the campus club, which will be set according to club is the hope of receiving approval.③ activity after school, club activity (education courses organized within the club by invitation only.) and holidays or holiday and must be a guidance counselor imjangji to Doha.Active.Relationship between units from outside the club and group activities in schools is a long activity through a tutor that intended to prior approval of the school employee, by location, time, and so on purpose, places,Should be charged. Put the head teacher goes in favor of the following : 1 in the club when I could order a dissolution. 1. when performing activities outside the original purpose2. club activity if there is cause scandal by a unhealthy content Club had lost the requirement of approval provision in paragraph 3. I Dreaming  Article 13 (dirty activities in class) dirty activities with each paragraph in class. Indoor faithfully execute the dirty as tasks such as cleaning. 1.2. class environment and supply arrangement, effort service to the atmosphere composition class. Immediately report to your homeroom teacher. if there is a problem controlling equipment class 3. 4. cleaning the blackboard during the break and preparation of the condition in next time tell. Five starts earlier than usual to school hours and on the square very keen after the arrangement and to lock the door.Article 14 (student activities in schools) schools with activities in each paragraph. 1. time to clean up a ring one she comes clean up the area. 2. use is always clean toilets and shut the door, and graffiti, not spit at.  3. the voices indoors to be quiet and not causing a scene or for mischief.4. not motion toward the booing or shouting in the window. 5. The paper or sewage you\'re throwing them away and pick up it needed. 6. trees or watch and enjoy not all forms of flowers. To participate actively in environmental cleanup activities such as community service. 7.Homeroom teacher or teacher in charge of of (other campus life) Article 15 of the following points are required to obtain permission to request a map and, if necessary, such teachers \' imjangto exist 1. when a meeting students in school. When a 2, outdoor activities to remain in the classroom during class 3. when to have a meeting with an outsider in school.Special when they want to use the 4. When to operate in a school in a holiday. 6. when doing the postings on the board attached to  Matters (attendance matters) attendance as follows : Article 16. Somewhere in students is by city school to school after any results, can not do, take the rest of the street.Keep heating the holidays and school holiday dates other than specified in the personal lesson back to attend. In the case in one of, and ③ Development following processing presence. 1. natural disasters, attendance fails due to a pro rata, including a legally designated contagious disease.2, public duty or not to appear due to a governmental authority In the case of a period of three treatment due to damage caused by school Four tend not to appear before the school\'s permission (Learning experience learning experiences for attendance when source has granted recognition.) Tend to be absent for unavoidable reasons, the school\'s permission other 5.Sprinkle at date treats them as absent when they do not attend and to be present to school time as when, late in the late, leave early before time when returning home after school in the school,Curriculum not attend class cases disposed of as a result. Put the same date late in one case only in case processing, consequences or the rest of the day.⑥ reentrant result, the rest of the day, exemplary, exemplary student absence of return to school, and perception, weaving, exemplary transfer, adds a number of each of the place of origin the number of times, but take each except in the number of overlapping period of attendance at school.  Article 17 (kind of stone) kind of absence as follows :① the disease in homeroom teacher from the disease within five days from the day after an absence with documents to prove if children`s homeroom teachers with human nature is to submit a report of absence Clean the absenteeism without permission 1. for negligence, wilful refusal to attend, running away, violations relevant agencies arrested Tuesday and escape2. long-term standards not present, In the case of more than five days consecutively : truancy ③ other absence Receive care. parents and family, parental assistance and, if unavoidable absence from the individual situation, 2. above was absent and not applicable in paragraph 2 of paragraph 1.Article 18 (` attendance), in case of the ` staff and 「 with National Public Officials Service Regulations Appendix 2 of Article 20, paragraph 1 are based on the 」 the cabinet as follows :</string>
    <string name="school">School</string>
    <string name="developer">Developer</string>
    <string name="send">Send</string>
    <string name="code">Open Source</string>
    <string name="school_tree">School Tree: Pine tree (will)</string>
    <string name="school_tree_message">Pine boasts restraint and patience, spirited weather wood of the tree. Meaning a willingness Ironsides</string>
    <string name="school_bird">School Bird: Magpie (happiness)</string>
    <string name="school_flower">School Flower</string>
    <string name="principal">Principal Personnel</string>
</resources>